completed Crud endpoints for Book Model

--- a/BookTrackApi/BookTrackApi/appsettings.json
+++ b/BookTrackApi/BookTrackApi/appsettings.json
@@ -5,7 +5,7 @@
       "Audience": "https://localhost:5093"
     },
     "ConnectionStrings": {
-      "DefaultConnection": "Data Source=CYB3RDUD3\\SQLEXPRESS;Initial Catalog=ShopApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      "DefaultConnection": "Data Source=CYB3RDUD3\\SQLEXPRESS;Initial Catalog=BookApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
     },
     "Logging": {
       "LogLevel": {
